fixed chat box expanding on overflow

--- a/frontend/src/styles/chatbox.scss
+++ b/frontend/src/styles/chatbox.scss
@@ -39,6 +39,8 @@
     list-style-type: none;
     padding: 5px;
     margin: 0;
+    height: 600px;
+    overflow: auto;
 }
 .chat-user {
     color:rgba(255, 255, 255, 0.7);
